--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SparkPoint" />
+        android:theme="@style/Theme.SparkPoint"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".activities.QRCodeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ReservationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.ReservationListActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
 
 </manifest>
