--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,36 +20,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.SparkPoint"
         android:usesCleartextTraffic="true">
 
         <!-- Google Maps API key -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAU4opoFjn5-2oRUeg8ze1YKVa-Qt7agXU"/>
+            android:value="AIzaSyAU4opoFjn5-2oRUeg8ze1YKVa-Qt7agXU" />
 
         <activity
             android:name=".activities.BookingDetailActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.ScanBookingActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.ProfileActivity"
-            android:exported="false" />
-
-        <!-- Launcher Activity -->
+            android:exported="false" /> <!-- Launcher Activity -->
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.EVOwnerHomeActivity"
             android:exported="true" />
@@ -59,15 +54,12 @@
             android:exported="true" />
         <activity
             android:name=".activities.RegisterActivity"
-            android:exported="true" />
-
-        <!-- ZXing CaptureActivity for QR scanning -->
+            android:exported="true" /> <!-- ZXing CaptureActivity for QR scanning -->
         <activity
             android:name="com.journeyapps.barcodescanner.CaptureActivity"
             android:screenOrientation="portrait"
             android:stateNotNeeded="true"
             tools:replace="android:screenOrientation" />
-
         <activity
             android:name=".activities.DashboardActivity"
             android:exported="false" />
