Implemented the Station Operator's booking view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,6 +75,9 @@
         <activity
             android:name=".activities.ReservationListActivity"
             android:exported="false" />
+        <activity
+            android:name=".activities.OperatorBookingsActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
