Add station list feature and UI enhancements
Introduced StationListActivity and StationAdapter to display available stations and allow users to add bookings. Updated DashboardActivity to show user info and provide navigation to the station list. Added new layouts for station list and station items, and enhanced the dashboard layout with a user welcome section and a button to view stations. Removed the add reservation FAB from the reservation list layout. Updated AndroidManifest to register the new activity.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:name=".activities.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".activities.EVOwnerHomeActivity"
+            android:name=".activities.StationListActivity"
             android:exported="true" />
         <activity
             android:name=".activities.OperatorHomeActivity"
